--- a/FiwareApp.yaml
+++ b/FiwareApp.yaml
@@ -4,7 +4,7 @@ name: FiwareApp
 services:
   FiwareApp:
     container_name: FiwareApp
-    image: sw4iot/examplefiwareapp:1.0
+    image: sw4iot/examplefiwareapp:latest
     gateway: host
     ports:
       - 5600:5600
